# static-rss

./: README.md  feeds.txt  hello.py  pyproject.toml  rss.html  rss.py
.github/workflows/: static.yml
site/: site.webmanifest
