[project]
name = "static-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "mako>=1.3.10",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
    "python-lsp-server>=1.12.2",
]
